Altera caminho das imagens

--- a/index.html
+++ b/index.html
@@ -142,24 +142,22 @@
 
                 <div id="videosFotos">
                     <div id="imagens">
-                        <img src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\calma_calabreso.png" alt="">
-                        <img src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\davi_baiana.jpeg" alt="">
-                        <img src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\dr_davi.jpeg" alt="">
-                        <img src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\robert_davivost.png" alt="">
-                        <img src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\sem_abigo.png" alt="">
+                        <img src="midia/calma_calabreso.png" alt="">
+                        <img src="midia/davi_baiana.jpeg" alt="">
+                        <img src="midia/dr_davi.jpeg" alt="">
+                        <img src="midia/robert_davivost.png" alt="">
+                        <img src="midia/sem_abigo.png" alt="">
                     </div>
 
                     <div id="videos">
                         <video controls>
-                            <source src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\davi_sedutor.mp4" type="video/mp4">
+                            <source src="midia/davi_sedutor.mp4" type="video/mp4">
                         </video>
-
                         <video controls>
-                            <source src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\davi_tinta.mp4" type="video/mp4">
+                            <source src="midia/davi_tinta.mp4" type="video/mp4">
                         </video>
-
                         <video controls>
-                            <source src="C:\Users\kavhs\OneDrive\Desktop\Programação\HTML\SITE DAVI BRITO\davi brito\davi_zoeiro.mp4" type="video/mp4">
+                            <source src="midia/davi_zoeiro.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
