Testando uns negocio ai

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Davi Brito - O fã clube</title>
+    <link rel="shortcut icon" href="midia/davi_icon.jpg" type="image/x-icon">
     <script >
         const answers = {
             q1: 'B', q2: 'A', q3: 'B',
